[maven-release-plugin] prepare for next development iteration (merged from jahia_pack/branches/JAHIA-6-6-X-X-BRANCH revision 488)
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@489 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/war/pom.xml
+++ b/war/pom.xml
@@ -470,7 +470,7 @@
     <parent>
         <groupId>org.jahia.server</groupId>
         <artifactId>jahia-pack-root</artifactId>
-        <version>6.6.1.1</version>
+        <version>6.6.1.2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>jahia-pack-war</artifactId>
