--- a/package/shared-libraries/pom.xml
+++ b/package/shared-libraries/pom.xml
@@ -88,7 +88,7 @@
       <dependency>
           <groupId>org.jahia.configuration</groupId>
           <artifactId>jahia-server-utils</artifactId>
-          <version>1.3</version>
+          <version>1.4-SNAPSHOT</version>
       </dependency>
 
   </dependencies>
