--- a/dm-package/pom.xml
+++ b/dm-package/pom.xml
@@ -53,7 +53,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>document-viewer</artifactId>
-            <version>1.0</version>
+            <version>1.1-SNAPSHOT</version>
             <type>war</type>
             <scope>runtime</scope>
         </dependency>
