--- a/war/pom.xml
+++ b/war/pom.xml
@@ -392,7 +392,7 @@
 
             <plugin>
                 <groupId>org.jahia.server</groupId>
-                <artifactId>maven-jahia-plugin</artifactId>
+                <artifactId>jahia-maven-plugin</artifactId>
                 <executions>
                     <execution>
                         <id>copy-templates</id>
@@ -414,6 +414,41 @@
                 <directory>src/main/resources</directory>
             </resource>
         </resources>
+        <pluginManagement>
+            <plugins>
+                <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+                <plugin>
+                    <groupId>org.eclipse.m2e</groupId>
+                    <artifactId>lifecycle-mapping</artifactId>
+                    <version>1.0.0</version>
+                    <configuration>
+                        <lifecycleMappingMetadata>
+                            <pluginExecutions>
+                                <pluginExecution>
+                                    <pluginExecutionFilter>
+                                        <groupId>
+                                            org.jahia.server
+                                        </groupId>
+                                        <artifactId>
+                                            jahia-maven-plugin
+                                        </artifactId>
+                                        <versionRange>
+                                            [3.0.1-SNAPSHOT,)
+                                        </versionRange>
+                                        <goals>
+                                            <goal>copy-templates</goal>
+                                        </goals>
+                                    </pluginExecutionFilter>
+                                    <action>
+                                        <ignore></ignore>
+                                    </action>
+                                </pluginExecution>
+                            </pluginExecutions>
+                        </lifecycleMappingMetadata>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
     </build>
     <reporting>
         <plugins>
