--- a/war/pom.xml
+++ b/war/pom.xml
@@ -354,7 +354,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>social</artifactId>
-            <version>1.4</version>
+            <version>1.5-SNAPSHOT</version>
             <type>war</type>
             <scope>runtime</scope>
         </dependency>
