--- a/pom.xml
+++ b/pom.xml
@@ -73,9 +73,9 @@
         <jahia-ce.package.version>${project.version}</jahia-ce.package.version>
         <jahia.project.structure.version>2</jahia.project.structure.version>
 
-        <jahia.archivers.version>2.10.1-SNAPSHOT</jahia.archivers.version>
-        <jahia.configurators.version>2.53.1-SNAPSHOT</jahia.configurators.version>
-        <jahia.deployers.version>2.7.1-SNAPSHOT</jahia.deployers.version>
+        <jahia.archivers.version>2.10.1</jahia.archivers.version>
+        <jahia.configurators.version>2.53.1</jahia.configurators.version>
+        <jahia.deployers.version>2.7.1</jahia.deployers.version>
 
         <pluto.version>2.0.2</pluto.version>
         <ant.version>1.8.2</ant.version>
@@ -111,7 +111,7 @@
 
 
         <!-- Jahia Maven plugin version and default settings -->
-        <jahia.plugin.version>3.0.1-SNAPSHOT</jahia.plugin.version>
+        <jahia.plugin.version>3.0.1</jahia.plugin.version>
         <!-- common settings -->
         <jahia.configure.useDataStore>true</jahia.configure.useDataStore>
         <jahia.configure.storeFilesInDB>false</jahia.configure.storeFilesInDB>
