--- a/war/pom.xml
+++ b/war/pom.xml
@@ -42,7 +42,7 @@
     <parent>
         <groupId>org.jahia.server</groupId>
         <artifactId>jahia-pack-root</artifactId>
-        <version>6.6.1.3-SNAPSHOT</version>
+        <version>6.6.1.3</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>jahia-pack-war</artifactId>
@@ -354,7 +354,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>social</artifactId>
-            <version>1.5-SNAPSHOT</version>
+            <version>1.5</version>
             <type>war</type>
             <scope>runtime</scope>
         </dependency>
@@ -440,7 +440,7 @@
                                         </goals>
                                     </pluginExecutionFilter>
                                     <action>
-                                        <ignore></ignore>
+                                        <ignore />
                                     </action>
                                 </pluginExecution>
                             </pluginExecutions>
