--- a/dm-package/pom.xml
+++ b/dm-package/pom.xml
@@ -53,28 +53,28 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>document-viewer</artifactId>
-            <version>1.0</version>
+            <version>2.0.0-SNAPSHOT</version>
             <type>war</type>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>document-thumbnails</artifactId>
-            <version>1.0</version>
+            <version>2.0.0-SNAPSHOT</version>
             <type>war</type>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>video-thumbnails</artifactId>
-            <version>1.0</version>
+            <version>2.0.0-SNAPSHOT</version>
             <type>war</type>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>gateway</artifactId>
-            <version>1.0</version>
+            <version>2.0.0-SNAPSHOT</version>
             <type>war</type>
             <scope>runtime</scope>
         </dependency>
