--- a/war/pom.xml
+++ b/war/pom.xml
@@ -55,203 +55,198 @@
             <groupId>org.jahia.modules</groupId>
             <artifactId>article</artifactId>
             <version>2.0.0-SNAPSHOT</version>
-            <type>war</type>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>bookmarks</artifactId>
             <version>2.0.0-SNAPSHOT</version>
-            <type>war</type>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>calendar</artifactId>
             <version>2.0.0-SNAPSHOT</version>
-            <type>war</type>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>contact</artifactId>
             <version>2.0.0-SNAPSHOT</version>
-            <type>war</type>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>docConverter</artifactId>
             <version>2.0.0-SNAPSHOT</version>
-            <type>war</type>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>event</artifactId>
             <version>2.0.0-SNAPSHOT</version>
-            <type>war</type>
+            
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>faq</artifactId>
             <version>2.0.0-SNAPSHOT</version>
-            <type>war</type>
+            
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>formbuilder</artifactId>
             <version>2.0.0-SNAPSHOT</version>
-            <type>war</type>
+            
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>googleAnalytics</artifactId>
             <version>2.0.0-SNAPSHOT</version>
-            <type>war</type>
+            
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>job</artifactId>
             <version>2.0.0-SNAPSHOT</version>
-            <type>war</type>
+            
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>location</artifactId>
             <version>2.0.0-SNAPSHOT</version>
-            <type>war</type>
+            
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>news</artifactId>
             <version>2.0.0-SNAPSHOT</version>
-            <type>war</type>
+            
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>person</artifactId>
             <version>2.0.0-SNAPSHOT</version>
-            <type>war</type>
+            
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>poll</artifactId>
             <version>2.0.0-SNAPSHOT</version>
-            <type>war</type>
+            
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>press</artifactId>
             <version>2.0.0-SNAPSHOT</version>
-            <type>war</type>
+            
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>publication</artifactId>
             <version>2.0.0-SNAPSHOT</version>
-            <type>war</type>
+            
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>rating</artifactId>
             <version>2.0.0-SNAPSHOT</version>
-            <type>war</type>
+            
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>rss</artifactId>
             <version>2.0.0-SNAPSHOT</version>
-            <type>war</type>
+            
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>sitemap</artifactId>
             <version>2.0.0-SNAPSHOT</version>
-            <type>war</type>
+            
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>socialsharing</artifactId>
             <version>2.0.0-SNAPSHOT</version>
-            <type>war</type>
+            
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>staticHTML</artifactId>
             <version>2.0.0-SNAPSHOT</version>
-            <type>war</type>
+            
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>summary</artifactId>
             <version>2.0.0-SNAPSHOT</version>
-            <type>war</type>
+            
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>teasers</artifactId>
             <version>2.0.0-SNAPSHOT</version>
-            <type>war</type>
+            
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>topstories</artifactId>
             <version>2.0.0-SNAPSHOT</version>
-            <type>war</type>
+            
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>translateworkflow</artifactId>
             <version>2.0.0-SNAPSHOT</version>
-            <type>war</type>
+            
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>twitter</artifactId>
             <version>2.0.0-SNAPSHOT</version>
-            <type>war</type>
+            
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>userregistration</artifactId>
             <version>2.0.0-SNAPSHOT</version>
-            <type>war</type>
+            
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>videostreaming</artifactId>
             <version>2.0.0-SNAPSHOT</version>
-            <type>war</type>
+            
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>webClipping</artifactId>
             <version>2.0.0-SNAPSHOT</version>
-            <type>war</type>
+            
             <scope>runtime</scope>
         </dependency>
 		<!-- end of Jahia Forge Modules -->
@@ -270,39 +265,35 @@
             <groupId>org.jahia.modules</groupId>
             <artifactId>templates-intranet</artifactId>
             <version>2.0.0-SNAPSHOT</version>
-            <type>war</type>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>templates-web</artifactId>
             <version>2.0.0-SNAPSHOT</version>
-            <type>war</type>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>templates-web-blue</artifactId>
             <version>2.0.0-SNAPSHOT</version>
-            <type>war</type>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>templates-web-space</artifactId>
             <version>2.0.0-SNAPSHOT</version>
-            <type>war</type>
             <scope>runtime</scope>
         </dependency>
         <dependency>
-            <groupId>org.jahia.prepackagedsites</groupId>
+            <groupId>org.jahia.modules</groupId>
             <artifactId>acme</artifactId>
             <version>2.0.0-SNAPSHOT</version>
             <type>zip</type>
             <scope>runtime</scope>
         </dependency>
         <dependency>
-            <groupId>org.jahia.prepackagedsites</groupId>
+            <groupId>org.jahia.modules</groupId>
             <artifactId>acmespace</artifactId>
             <version>2.0.0-SNAPSHOT</version>
             <type>zip</type>
