--- a/war/pom.xml
+++ b/war/pom.xml
@@ -286,14 +286,14 @@
             <scope>runtime</scope>
         </dependency>
         <dependency>
-            <groupId>org.jahia.modules</groupId>
+            <groupId>org.jahia.prepackagedsites</groupId>
             <artifactId>acme</artifactId>
             <version>2.0.0-SNAPSHOT</version>
             <type>zip</type>
             <scope>runtime</scope>
         </dependency>
         <dependency>
-            <groupId>org.jahia.modules</groupId>
+            <groupId>org.jahia.prepackagedsites</groupId>
             <artifactId>acmespace</artifactId>
             <version>2.0.0-SNAPSHOT</version>
             <type>zip</type>
