--- a/war/pom.xml
+++ b/war/pom.xml
@@ -109,7 +109,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>faq</artifactId>
-            <version>1.2</version>github
+            <version>1.2</version>
             <type>war</type>
             <scope>runtime</scope>
         </dependency>
