--- a/dm-package/pom.xml
+++ b/dm-package/pom.xml
@@ -52,23 +52,32 @@
     <dependencies>
         <dependency>
             <groupId>org.jahia.modules</groupId>
+            <artifactId>document-management-api</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
+            <artifactId>document-viewer-service</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
             <artifactId>document-viewer</artifactId>
             <version>2.0.0-SNAPSHOT</version>
-            <type>war</type>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>document-thumbnails</artifactId>
             <version>2.0.0-SNAPSHOT</version>
-            <type>war</type>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>video-thumbnails</artifactId>
             <version>2.0.0-SNAPSHOT</version>
-            <type>war</type>
             <scope>runtime</scope>
         </dependency>
         <dependency>
