--- a/war/pom.xml
+++ b/war/pom.xml
@@ -42,7 +42,7 @@
     <parent>
         <groupId>org.jahia.server</groupId>
         <artifactId>jahia-pack-root</artifactId>
-        <version>6.6.1.4-SNAPSHOT</version>
+        <version>6.6.1.4</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>jahia-pack-war</artifactId>
@@ -102,7 +102,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>event</artifactId>
-            <version>1.3-SNAPSHOT</version>
+            <version>1.3</version>
             <type>war</type>
             <scope>runtime</scope>
         </dependency>
@@ -116,7 +116,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>formbuilder</artifactId>
-            <version>1.4-SNAPSHOT</version>
+            <version>1.4</version>
             <type>war</type>
             <scope>runtime</scope>
         </dependency>
@@ -256,7 +256,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>videostreaming</artifactId>
-            <version>1.4-SNAPSHOT</version>
+            <version>1.4</version>
             <type>war</type>
             <scope>runtime</scope>
         </dependency>
