--- a/pom.xml
+++ b/pom.xml
@@ -401,6 +401,11 @@
                     <artifactId>maven-site-plugin</artifactId>
                     <version>${maven3.site.plugin.version}</version>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-dependency-plugin</artifactId>
+                    <version>2.6</version>
+                </plugin>
             </plugins>
         </pluginManagement>
         <plugins>
