--- a/war/pom.xml
+++ b/war/pom.xml
@@ -85,14 +85,18 @@
             <groupId>org.jahia.modules</groupId>
             <artifactId>event</artifactId>
             <version>2.0.0-SNAPSHOT</version>
-            
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
+            <artifactId>external-provider</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>faq</artifactId>
             <version>2.0.0-SNAPSHOT</version>
-            
             <scope>runtime</scope>
         </dependency>
         <dependency>
