Upgraded JDBC drivers: Derby to 10.10.1.1, MySQL to 5.1.26, PostgreSQL to 9.2-1003-jdbc4, Oracle to 12.1.0.1
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@715 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/jahia-installer-package/pom.xml
+++ b/package/jahia-installer-package/pom.xml
@@ -90,7 +90,7 @@
             <version>${driver.mysql.version}</version>
         </dependency>
         <dependency>
-            <groupId>postgresql</groupId>
+            <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>${driver.postgresql.version}</version>
         </dependency>
