--- a/pom.xml
+++ b/pom.xml
@@ -72,9 +72,9 @@
         <pluto.version>2.0.2</pluto.version>
         <ant.version>1.8.2</ant.version>
 
-        <driver.derby.version>10.9.1.0</driver.derby.version>
-        <driver.mysql.version>5.1.25</driver.mysql.version>
-        <driver.postgresql.version>9.2-1002.jdbc4</driver.postgresql.version>
+        <driver.derby.version>10.10.1.1</driver.derby.version>
+        <driver.mysql.version>5.1.26</driver.mysql.version>
+        <driver.postgresql.version>9.2-1003-jdbc4</driver.postgresql.version>
 
         <!-- MANIFEST.MF information -->
         <jahia.manifest.vendor.name>Jahia Solutions Group SA</jahia.manifest.vendor.name>
