Fix acmespace version
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/branches/JAHIA_6_6_2_0_RC@734 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/war/pom.xml
+++ b/war/pom.xml
@@ -317,7 +317,7 @@
         <dependency>
             <groupId>org.jahia.prepackagedsites</groupId>
             <artifactId>acmespace</artifactId>
-            <version>1.4</version>
+            <version>1.5-SNAPSHOT</version>
             <type>zip</type>
             <scope>runtime</scope>
         </dependency>
