BACKLOG-4440 : BACKLOG-4442 - Replace commons-dbcp pool with Tomcat's native https://jira.jahia.org/browse/BACKLOG-4442
Moved JDBC drivers JARs from WEB-INF/lib to tomcat/lib (is a requirement of the Tomcat's pool, otherwise driver classes are not found).
Replaced pool factory class in the context.xml with the Tomcat's one.
Support new pool type in the Jahia Administration / Database Settings screen.


git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@779 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/jahia-installer-package/pom.xml
+++ b/package/jahia-installer-package/pom.xml
@@ -290,6 +290,15 @@
                                     <outputDirectory>${project.build.directory}/artifacts</outputDirectory>
                                 </artifactItem>
                                 <artifactItem>
+                                    <groupId>org.jahia.server</groupId>
+                                    <artifactId>jdbc-drivers</artifactId>
+                                    <version>${project.version}</version>
+                                    <classifier>all</classifier>
+                                    <type>zip</type>
+                                    <overWrite>false</overWrite>
+                                    <outputDirectory>${project.build.directory}/artifacts</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
                                     <groupId>org.apache.ant</groupId>
                                     <artifactId>ant</artifactId>
                                     <version>${ant.version}</version>
