--- a/package/jahia-installer-package/src/main/resources/izpack/install.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/install.properties
@@ -20,7 +20,7 @@ mailServer=${mailSettings.server}
 operatingMode=${operatingMode}
 overwritedb=${dbSettings.dbms.createTables}
 storeFilesInDB=${dbSettings.dbms.storeFilesInDB}
-targetConfigurationDirectory=${jahia.war.target.path}
 targetServerDirectory=${INSTALL_PATH}/${server.type}
 targetServerType=${server.type}
+webAppDirName=${jahia.war.target.dir.name}
 jahiaProperties="documentConverter.enabled":"${dmConfig.officePath.provided}","documentConverter.officeHome":"${dmConfig.officePath}","jahia.dm.viewer.enabled":"${dmConfig.pdf2swfPath.provided}","jahia.dm.viewer.pdf2swf":"${dmConfig.pdf2swfPath}","jahia.dm.thumbnails.video.enabled":"${dmConfig.ffmpegPath.provided}","jahia.dm.thumbnails.video.ffmpeg":"${dmConfig.ffmpegPath}","imageService":"${dmConfig.imageService}","imageMagickPath":"${dmConfig.imagemagickPath}"
