QA-5158: move Nexus plugin into a profile (merged from jahia_pack/branches/JAHIA-6-6-X-X-BRANCH revision 846)
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@847 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/pom.xml
+++ b/pom.xml
@@ -339,6 +339,20 @@
                 </plugins>
             </build>
         </profile>
+        <profile>
+            <id>release-to-staging-repository</id>
+            <plugin>
+                <groupId>org.sonatype.plugins</groupId>
+                <artifactId>nexus-staging-maven-plugin</artifactId>
+                <version>${nexus.maven.plugin.version}</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <nexusUrl>https://devtools.jahia.com/nexus/</nexusUrl>
+                    <serverId>staging-repository</serverId>
+                    <stagingProfileId>64277f72646358</stagingProfileId>
+                </configuration>
+            </plugin>
+        </profile>
     </profiles>
 
     <modules>
@@ -515,18 +529,6 @@
                     <goals>deploy</goals>
                     <preparationGoals>clean install</preparationGoals>
                     <releaseProfiles>installer,windows-installer</releaseProfiles>
-                </configuration>
-            </plugin>
-			
-            <plugin>
-                <groupId>org.sonatype.plugins</groupId>
-                <artifactId>nexus-staging-maven-plugin</artifactId>
-                <version>${nexus.maven.plugin.version}</version>
-                <extensions>true</extensions>
-                <configuration>
-                    <nexusUrl>https://devtools.jahia.com/nexus/</nexusUrl>
-                    <serverId>staging-repo</serverId>
-                    <stagingProfileId>64277f72646358</stagingProfileId>
                 </configuration>
             </plugin>
         </plugins>
