QA-5289 - Change the background color of the installer jahia https://jira.jahia.org/browse/QA-5289
Introduced support for Nimbus Look and Feel and changed colors to white

git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@859 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/jahia-installer-package/pom.xml
+++ b/package/jahia-installer-package/pom.xml
@@ -145,7 +145,7 @@
                             <stayAlive>false</stayAlive>
                             <icon>${project.build.directory}/images/jahia.ico</icon>
                             <jre>
-                                <minVersion>1.6.0_10</minVersion>
+                                <minVersion>1.6</minVersion>
                             </jre>
                             <splash>
                                 <file>${project.build.directory}/images/splash.bmp</file>
