QA-5344 - INSTALLATION: Default language not kept in Jahia https://jira.jahia.org/browse/QA-5344
Allow specifying the root user preferred language during installation.
In "Express" installation mode use the selected installer language as the root's preferred one.

git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@863 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/jahia-installer-package/src/main/resources/izpack/install.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/install.properties
@@ -11,6 +11,7 @@ jahiaRootEmail=${superUser.email}
 jahiaRootFirstname=${superUser.firstname}
 jahiaRootLastname=${superUser.lastname}
 jahiaRootPassword=${superUser.password}
+jahiaRootPreferredLang=${superUser.preferredLang}
 jahiaRootUsername=${superUser.username}
 jahiaToolManagerPassword=${jahiaManager.password}
 jahiaToolManagerUsername=${jahiaManager.username}
